Fixing layout issues

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -32,7 +32,7 @@ header {
 
 .menu-btn {
   width: 1rem;
-  margin: 2.38rem 4.75rem 2.31rem 1.5rem;
+  margin: 2.38rem 2.62rem 2.31rem 1.5rem;
 }
 
 .logo {
@@ -40,7 +40,9 @@ header {
 }
 
 .cart {
-  margin: 0 2.13rem 0 auto;
+  width: 1.4375rem;
+  height: 1.25rem;
+  margin: 2.19rem 2.13rem 0 auto;
 }
 
 .menu[data-visible="false"] {
@@ -132,7 +134,7 @@ header {
     padding-bottom: 2.25rem;
   }
   .cart {
-    margin-right: 0;
+    margin: 2rem 0 0 auto;
   }
   .menu-btn {
     display: none;
