--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -171,6 +171,7 @@
   .banner__heading {
     font-size: 3.5rem;
     letter-spacing: 0.125rem;
+    line-height: 1.03;
     span {
       margin-bottom: 1.5rem;
     }
